✨ midifi subscriptins method
